GS-3252 Fix tooltip css, fix z-index hack for star

--- a/src/webapp/res/css/school/nearby.css
+++ b/src/webapp/res/css/school/nearby.css
@@ -67,6 +67,17 @@ li#nearMore a {
     text-decoration:underline;
 }
 
+#nearbySchools #map .tooltip {
+    font-size: small;
+    font-weight: bold;
+    padding: 2px;
+    border-width: 1px 2px 2px 1px;
+    border-color: #000 #666 #666 #000;
+    border-style: solid;
+    background-color: #FF9;
+    color: #000;
+}
+
 #nearbySchools .saveLink {
 	background: url(../../../res/img/bullet/yellow_plus9x9.gif) no-repeat left center;
 	font-size: 11px;
